# bind9

./: .ansible-lint  .gitignore  .travis.yml  README.md  galaxy.yml  pyproject.toml  requirements-dev.txt  requirements-monorepo.yml  requirements-standalone.yml  requirements.txt
.github/workflows/: molecule.yml
defaults/: main.yml
handlers/: main.yml
meta/: main.yml
molecule/default/: converge.yml  molecule.yml  prepare.yml
molecule/default/tests/: test_default.py
molecule/kvm/: converge.yml  molecule.yml
molecule/kvm/tests/: test_default.py
molecule/parallels/: converge.yml  molecule.yml  tests
molecule/parallels/tests/: test_default.py
tasks/: config_bind.yml  dns_client.yml  install.yml  main.yml  manage_zones.yml  prereq.yml  requirements.yml  role_facts.yml
templates/etc/bind/: named.conf.local.j2  named.conf.options.j2
templates/systemd-resolved.conf.d/: head.j2
vars/: main.yml
